--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
         <h1>Контактна сторінка</h1>
         <nav>
             <ul><li><a href="index.html">Головна</a></li></ul>
+            <ul><li><a href="main.html">Тест</a></li></ul>
         </nav>
     </header>
 
